Make QOL changes to the editor and compilation.